Fix for chevron alignment in Safari

--- a/client/my-sites/customer-home/cards/actions/quick-links/style.scss
+++ b/client/my-sites/customer-home/cards/actions/quick-links/style.scss
@@ -34,6 +34,10 @@
 		padding-bottom: 0;
 		padding-top: 0;
 	}
+
+	.foldable-card__expand .gridicon {
+		width: auto;
+	}
 }
 
 .quick-links__boxes {
